# Inner-Heart_AI-Chatbot

./: .gitignore  PRD.md  README.md  TRD.md  appsscript.json  gemini.txt  index.html  pyproject.toml
gs/: analyst_agent.gs  code.gs  listener_agent.gs  rag_loader.gs  rag_retriever.gs
knowledge/: 01_emotion_responses.md  02_relationship_scenarios.md  03_tone_style_guide.md  04_nvc_theory.md  05_nvc_violation_pattern.md  06_nvc_vocabilary_guide.md
src/: __init__.py  config.py  main.py  rag_indexer.py  utils.py
src/agents/: __init__.py  analyst.py  listener.py  orchestrator.py  retriever.py
